added guide, guideObject pages

--- a/src/css/blocks/contestTsigunWoman.css
+++ b/src/css/blocks/contestTsigunWoman.css
@@ -71,7 +71,7 @@
 	background: url("../../images/sprite.png") -2035px -5px no-repeat;
 	}
 
-.slider-wrp.mini .slick-slide {
+.contestTsigunWoman-gallery .slider-wrp.mini .slick-slide {
 	width: 84px;
 	margin-right: 5px;
 	cursor: pointer;
