--- a/src/css/css3.css
+++ b/src/css/css3.css
@@ -20,7 +20,7 @@
 @import "blocks/guide.css";
 @import "blocks/guideObject.css";
 @import "blocks/registration.css";
-@import "blocks/calendar.css";
+@import "blocks/calendarEvents.css";
 @import "blocks/calendarEvent.css";
 
 
