--- a/src/pug/layout/layout.pug
+++ b/src/pug/layout/layout.pug
@@ -23,6 +23,7 @@ html(class='no-js' lang='ru')
 		script(src='js/vendor/jquery-migrate-1.4.1.min.js')
 		script(src='js/vendor/jquery.form.min.js')
 		script(src='js/vendor/jquery-ui/jquery-ui.min.js')
+		script(src='js/vendor/jquery-ui/jquery.ui.datepicker-ru.js')
 		script(src='js/vendor/fancybox/jquery.fancybox.pack.js')
 		script(src='js/vendor/slick.js/slick.min.js')
 		script(src='js/main.js')
