--- a/src/pug/blocks/ad.pug
+++ b/src/pug/blocks/ad.pug
@@ -3,7 +3,13 @@ section(class="block-ad")
 		span Реклама 
 		| на портале
 	div(class="ad-wrapper")
+		div(class="ad-slider-controls")
+			div(class="ad-slider-prev")
+			div(class="ad-slider-next")
 		div(class="ad-slider")
-			div(class="slide")
+			a(class="slide" href="#")
 				div(class="slide-image")
 					img(src="images/ad-img.jpg" alt="Реклама" width="289" height="356")
+			a(class="slide" href="#")
+				div(class="slide-image")
+					img(src="images/ad-img2.jpg" alt="Реклама" width="289" height="356")
