--- a/src/pug/blocks/header.pug
+++ b/src/pug/blocks/header.pug
@@ -1,12 +1,39 @@
 header(class="block-header")
 	div(class="site-wrap")
 		div(class="header-wrapper clearfix")
-			div(class="header-menu-toggle active")
+			div(class="header-menu-toggle burger-js")
 			div(class="header-logo-wrapper")
 				div(class="header-logo")
 					a(href="#")
 						img(src="images/main-logo.png" width="186" height="39" alt="Логотип")
 			div(class="header-sign auth-btn-js")
+
+	nav(class="header-navigation nav-js")
+		div(class="header-menu-wrapper")
+				ul(class="header-menu")
+					li(class="header-menu-item")
+						a(class="item-title" href="#") Путеводитель по Хайнаню
+					li(class="header-menu-item")
+						a(class="item-title" href="#") Календарь мероприятий
+					li(class="header-menu-item")
+						a(class="item-title" href="#") Хайнань сегодня
+					li(class="header-menu-item")
+						div(class="item-title toggle toggle-js") О хайнане
+						ul(class="submenu header-submenu-js")
+							li(class="submenu-item")
+								a(class="submenu-title" href="#") Карта Хайнаня
+							li(class="submenu-item")
+								a(class="submenu-title" href="#") Факты об острове
+							li(class="submenu-item")
+								a(class="submenu-title" href="#") Визовый режим
+					li(class="header-menu-item")
+						a(class="item-title" href="#") Содружество HNL
+					li(class="header-menu-item")
+						a(class="item-title" href="#") Служба знакомств
+					li(class="header-menu-item")
+						a(class="item-title" href="#") Партнеры
+					li(class="header-menu-item")
+						a(class="item-title" href="#") Форум
 
 	div(class="header-authorization authorization-js")
 		h3(class="authorization-title") Вход на сайт
