--- a/src/pug/pages/guideObject.pug
+++ b/src/pug/pages/guideObject.pug
@@ -118,7 +118,19 @@ block content
 						div(class="guideObject-similar-object")
 							h3(class="title") Похожие объекты
 							div(class="slider-wrapper")
+								div(class="similar-object-slider-controls")
+									div(class="similar-object-slider-prev")
+									div(class="similar-object-slider-next")
 								div(class="slider")
+									div(class="slide")
+										div(class="object")
+											a(class="image" href="#")
+												img(src="images/other-obj.jpg" alt="Фото" width="290" height="161")
+											div(class="object-wrp")
+												div(class="title") "Большая Пицца" - ресторан-шведский стол 
+												div(class="address") Хайкоу, Улица Юйша 16-1, ...
+												a(class="testimonials" href="#") Отзывов: 1
+
 									div(class="slide")
 										div(class="object")
 											a(class="image" href="#")
