--- a/src/pug/pages/newsBlogFull.pug
+++ b/src/pug/pages/newsBlogFull.pug
@@ -68,7 +68,22 @@ block content
 				div(class="newsBlogFull-similar-events")
 					h3(class="title") Похожие события
 					div(class="slider-wrapper")
+						div(class="similar-events-slider-controls")
+							div(class="similar-events-slider-prev")
+							div(class="similar-events-slider-next")
 						div(class="slider")
+							div(class="slide")
+								div(class="autor")
+									div(class="name") 悦心 (Yue Xin) 
+									time(class="date" datetime="2017-05-8") 8 Марта 2016
+									div(class="photo")
+								a(class="event" href="#")
+									div(class="image")
+										img(src="images/blog-img3.jpg" alt="Фото" width="290" height="132")
+									div(class="event-wrp")
+										div(class="title") С праздником Весны!
+										div(class="text") Поздравления редакции ХНЛ
+
 							div(class="slide")
 								div(class="autor")
 									div(class="name") 悦心 (Yue Xin) 
