--- a/src/css/blocks/ad.css
+++ b/src/css/blocks/ad.css
@@ -1,4 +1,5 @@
 .block-ad {
+	position: relative;
 	padding: 0 15px;
 	padding-top: 26px;
 	padding-bottom: 59px;
@@ -28,6 +29,10 @@
 	color: #26c6da;
 }
 
+..ad-slider .slide {
+	display: block;
+}
+
 .ad-slider .slide-image {
 	text-align: center;
 }
@@ -36,4 +41,26 @@
 	width: 100%;
 	max-width: 100%;
 	height: auto;
+}
+
+.ad-slider-controls .ad-slider-prev {
+	position: absolute;
+	width: 6px;
+	height: 15px;
+	top: 30px;
+	right: 46px;
+	border: none;
+	background: url("../../images/sprite.png") -2019px -5px no-repeat;
+	cursor: pointer;
+}
+
+.ad-slider-controls .ad-slider-next {
+	position: absolute;
+	width: 6px;
+	height: 15px;
+	top: 30px;
+	right: 17px;
+	border: none;
+	background: url("../../images/sprite.png") -2035px -5px no-repeat;
+	cursor: pointer;
 }
