--- a/src/css/blocks/partners-list.css
+++ b/src/css/blocks/partners-list.css
@@ -17,11 +17,34 @@
 	margin-bottom: 28px;
 }
 
-.partners-list-category select {
+.partners-list-category select	{
 	width: 100%;
 	padding: 5px 0px;
+	padding-right: 32px;
+	padding-left: 13px;
+	border: 1px solid #c4c4c4;
 	color: #000;
 	background-color: #fff;
+	cursor: pointer;
+	-webkit-appearance:none;
+	-moz-appearance:none;
+	appearance:none;
+	background: #fff url("../../images/select-dw-icon.png") right 11px top 50% / 10px no-repeat
+}
+
+.partners-list-category .select-wrp {
+	position: relative;
+}
+
+.partners-list-category .select-wrp::after {
+	position: absolute;
+	content: '';
+	width: 1px;
+	height: 30px;
+	top: 0;
+	right: 32px;
+	background-color: #c4c4c4;
+	cursor: pointer;
 }
 
 .block-partners-list .top-wrapper {
