--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -7,102 +7,188 @@ block content
 
 	section(class="block-content")
 		div(class="site-wrap")
+
 			section(class="block-previews")
-				div(class="previews-item news")
-					h3(class="previews-title title")
+
+				div(class="previews-news")
+					h3(class="news-title title previews-title")
 						span Новости 
 						| Хайнаня
-					div(class="previews-item-slider")
-						div(class="slide")
-							a(class="previews-main-article" href="aboutHainanFotoFull.html")
-								div(class="main-article-img")
-									img(src="images/news-img.jpg" alt="Изображение к новости" width="290" height="136")
-									div(class="main-article-description")
-										h3(class="title") Новогодние мемы
-										div(class="autor") Анастасия, 2 февраля 2017
-							div(class="articles-wrapper")
-								a(class="previews-article" href="#")
-									h3(class="title") Романтика тысячелетий ждёт Вас! 
-									div(class="autor") 悦心 (Yue Xin), 29 Января 2017
-									div(class="text") А у нас специальная программа! Почти бесплатно!
-								a(class="previews-article" href="#")
-									h3(class="title") Регата "Компас" состоится в апреле.
-									div(class="autor") Уважаемая, 31 Января 2017
-									div(class="text") Один из немногих легальных способов для иностранцев побывать у Саньша.
-				div(class="previews-show-all")
-					a(href="#") все новости
+					div(class="news-slider-wrapper")
+						div(class="news-slider-controls")
+							div(class="news-slider-prev")
+							div(class="news-slider-next")
+						div(class="news-slider")
+							div(class="news-slide")
+								a(class="news-main-article" href="#")
+									div(class="main-article-img")
+										img(src="images/news-img.jpg" alt="Изображение к новости" width="290" height="136")
+										div(class="main-article-description")
+											h3(class="title") Новогодние мемы
+											div(class="autor") Анастасия, 2 февраля 2017
+								div(class="news-articles-wrapper")
+									a(class="news-article" href="#")
+										h3(class="title") Романтика тысячелетий ждёт Вас! 
+										div(class="autor") 悦心 (Yue Xin), 29 Января 2017
+										div(class="text") А у нас специальная программа! Почти бесплатно!
+									a(class="news-article" href="#")
+										h3(class="title") Регата "Компас" состоится в апреле.
+										div(class="autor") Уважаемая, 31 Января 2017
+										div(class="text") Один из немногих легальных способов для иностранцев побывать у Саньша.
 
-				div(class="previews-item objects")
-					h3(class="previews-title title")
+							div(class="news-slide")
+								a(class="news-main-article" href="#")
+									div(class="main-article-img")
+										img(src="images/news-img.jpg" alt="Изображение к новости" width="290" height="136")
+										div(class="main-article-description")
+											h3(class="title") Новогодние мемы
+											div(class="autor") Анастасия, 2 февраля 2017
+								div(class="news-articles-wrapper")
+									a(class="news-article" href="#")
+										h3(class="title") Романтика тысячелетий ждёт Вас! 
+										div(class="autor") 悦心 (Yue Xin), 29 Января 2017
+										div(class="text") А у нас специальная программа! Почти бесплатно!
+									a(class="news-article" href="#")
+										h3(class="title") Регата "Компас" состоится в апреле.
+										div(class="autor") Уважаемая, 31 Января 2017
+										div(class="text") Один из немногих легальных способов для иностранцев побывать у Саньша.
+					div(class="news-show-all show-all")
+						a(href="#") все новости
+
+				div(class="previews-objects")
+					h3(class="objects-title previews-title")
 						span Лучшие заведения 
 						| на Хайнане 
-					div(class="select-form-wrapper")
-						form(class="select-form" action="#" method="post" name="specialists-filter-form")
-							select(class="select" name="select-section" tabindex="1")
-								option(value="option1") Значение 1
-								option(value="option1") Значение 3
-					div(class="previews-item-slider")
-						a(class="slide" href="#")
-							div(class="slide-img")
-								img(src="images/resto.jpg" alt="Рестораны" width="286" height="140")
-							div(class="slide-description")
-								h3(class="slide-description-title") "Лемон грасс" - тайский ресторан
-								div(class="slide-description-text") Санья, Улица Саньявань Лу 88, комплекс "Берег ...
-								div(class="slide-description-testimonials")
-									div(class="text") Отзывов: 1
-									div(class="likes") 
+					div(class="objects-form-wrapper")
+						form(class="form" action="#" method="post" name="objects-form")
+							div(class="select-wrp")
+								select(class="category-select" name="category-select")
+									option(value="Значение 0" disabled selected style='display:none;') Выберите раздел
+									option(value="option1") Значение 1
+									option(value="option1") Значение 3
+					div(class="objects-slider-wrapper")
+						div(class="objects-slider-controls")
+							div(class="objects-slider-prev")
+							div(class="objects-slider-next")
+					div(class="objects-slider")
+						div(class="objects-slide")
+							div(class="objects-category-title") Рестораны
+							div(class="objects-keywords")
+								div(class="keywords-wrp")
+									span(class="keyword") Китай
+									span(class="keyword") Хайнань
+									span(class="keyword") Рестораны
+									span(class="keyword") Тайская кухня
+									span(class="keyword") Санья
+									span(class="keyword") том яп суп
+							a(class="objects-image" href="#")
+								img(src="images/guide1.jpg" alt="Рестораны" width="286" height="140")
+							div(class="objects-description")
+								h3(class="description-title") "Лемон грасс" - тайский ресторан
+								div(class="description-text") Санья, Улица Саньявань Лу 88, комплекс "Берег ...
+								div(class="objects-testimonials")
+									a(class="text" href="#") Отзывов: 1
+									div(class="objects-likes") 
 										span(class="like")
 										span(class="like")
 										span(class="like")
 										span(class="like")
 										span(class="like")
-				div(class="previews-show-all objects")
+
+						div(class="objects-slide")
+							div(class="objects-category-title") Рестораны
+							div(class="objects-keywords")
+								div(class="keywords-wrp")
+									span(class="keyword") Китай
+									span(class="keyword") Хайнань
+									span(class="keyword") Рестораны
+									span(class="keyword") Тайская кухня
+									span(class="keyword") Санья
+									span(class="keyword") том яп суп
+							a(class="objects-image" href="#")
+								img(src="images/guide1.jpg" alt="Рестораны" width="286" height="140")
+							div(class="objects-description")
+								h3(class="description-title") "Лемон грасс" - тайский ресторан
+								div(class="description-text") Санья, Улица Саньявань Лу 88, комплекс "Берег ...
+								div(class="objects-testimonials")
+									a(class="text" href="#") Отзывов: 1
+									div(class="objects-likes") 
+										span(class="like")
+										span(class="like")
+										span(class="like")
+										span(class="like")
+										span(class="like")
+				div(class="objects-show-all show-all")
 					a(href="#") все объекты
 
-
-
-				div(class="previews-item photos")
-					h3(class="previews-title title")
+				div(class="previews-photos")
+					h3(class="photos-title previews-title")
 						span Новые 
 						| Фото
-					div(class="slider-wrapper")
-						div(class="slider")
-							div(class="slide")
-								div(class="photo-wrapper")
+					div(class="photos-slider-wrapper")
+						div(class="photos-slider-controls")
+							div(class="photos-slider-prev")
+							div(class="photos-slider-next")
+						div(class="photos-slider")
+							div(class="photos-slide")
+								a(class="photos-item" href="#")
 									div(class="big-photo")
-										a(href="#")
-											img(src="images/preview-photo1.jpg" alt="Фото" width="280" height="164")
+										img(src="images/gal1-big.jpg" alt="Фото" width="290" height="164")
 									div(class="mini-photos")
-										a(href="")
-											img(src="images/preview-photo2.jpg" alt="Фото" width="90" height="88")
-										a(href="")
-											img(src="images/preview-photo3.jpg" alt="Фото" width="90" height="88")
-										a(class="all" href="#")
-											span 4 
+										div(class="itm")
+											img(src="images/gal-mini.jpg" alt="Фото" width="90" height="89")
+										div(class="itm")
+											img(src="images/gal-mini.jpg" alt="Фото" width="90" height="89")
+										div(class="itm all" href="#")
+											span 6 
 											| фото
-				div(class="previews-show-all")
+
+							div(class="photos-slide")
+								a(class="photos-item" href="#")
+									div(class="big-photo")
+										img(src="images/gal1-big.jpg" alt="Фото" width="290" height="164")
+									div(class="mini-photos")
+										div(class="itm")
+											img(src="images/gal-mini.jpg" alt="Фото" width="90" height="89")
+										div(class="itm")
+											img(src="images/gal-mini.jpg" alt="Фото" width="90" height="89")
+										div(class="itm all" href="#")
+											span 6 
+											| фото
+				div(class="photos-show-all show-all")
 					a(href="#") все фото
 
-				div(class="previews-item video")
-					h3(class="previews-title title")
+				div(class="previews-video")
+					h3(class="video-title previews-title")
 						span Новые 
 						| Видео
-					div(class="slider-wrapper")
-						div(class="slider")
-							div(class="slide")
-								div(class="video")
-					div(class="previews-show-all")
+					div(class="video-slider-wrapper")
+						div(class="video-slider-controls")
+							div(class="video-slider-prev")
+							div(class="video-slider-next")
+						div(class="video-slider")
+							div(class="video-slide")
+								div(class="video-sample")
+									img(src="images/video-sample.jpg" alt="Фото" width="320" height="193")
+							div(class="video-slide")
+								div(class="video-sample")
+									img(src="images/video-sample.jpg" alt="Фото" width="320" height="193")
+					div(class="video-show-all show-all")
 						a(href="#") все видео
 
 				include ../blocks/events
 
-				div(class="previews-item blogs")
-					h3(class="previews-title title")
+				div(class="previews-blogs")
+					h3(class="blogs-title previews-title")
 						span Новое 
 						| в блогах
-					div(class="slider-wrapper")
-						div(class="slider")
-							div(class="slide")
+					div(class="blogs-slider-wrapper")
+						div(class="blogs-slider-controls")
+							div(class="blogs-slider-prev")
+							div(class="blogs-slider-next")
+						div(class="blogs-slider")
+
+							div(class="blogs-slide")
 								div(class="blogs-items")
 									div(class="blogs-item sec1")
 										div(class="blogs-wrapper")
@@ -113,7 +199,7 @@ block content
 											div(class="blogs-img")
 												img(src="images/blogs-img.jpg" alt="Фото" width="290" height="136")
 											div(class="blogs-text")
-												div(class="blogs-title") Топ фильмов, снятых на Хайнане 
+												div(class="blogs-text-title") Топ фильмов, снятых на Хайнане 
 												div(class="blogs-description") Что посмотреть, чтобы прочувствовать ритм Хайнаня. 
 									div(class="blogs-item sec2")
 										div(class="blogs-wrapper")
@@ -124,9 +210,35 @@ block content
 											div(class="blogs-img")
 												img(src="images/blogs-img2.jpg" alt="Фото" width="290" height="136")
 											div(class="blogs-text")
-												div(class="blogs-title") Что случилось с набережной в Дадунхае? 
+												div(class="blogs-text-title") Что случилось с набережной в Дадунхае? 
 												div(class="blogs-description") Не спрятаться, не скрыться...
-					div(class="previews-show-all")
+
+							div(class="blogs-slide")
+								div(class="blogs-items")
+									div(class="blogs-item sec1")
+										div(class="blogs-wrapper")
+											div(class="blogs-name") 悦心 (Yue Xin) 
+											div(class="blogs-date") 30 Января 2017
+											div(class="blogs-foto")
+										a(class="blogs-content" href="#")
+											div(class="blogs-img")
+												img(src="images/blogs-img.jpg" alt="Фото" width="290" height="136")
+											div(class="blogs-text")
+												div(class="blogs-text-title") Топ фильмов, снятых на Хайнане 
+												div(class="blogs-description") Что посмотреть, чтобы прочувствовать ритм Хайнаня. 
+									div(class="blogs-item sec2")
+										div(class="blogs-wrapper")
+											div(class="blogs-name") 悦心 (Yue Xin) 
+											div(class="blogs-date") 30 Января 2017
+											div(class="blogs-foto")
+										a(class="blogs-content" href="#")
+											div(class="blogs-img")
+												img(src="images/blogs-img2.jpg" alt="Фото" width="290" height="136")
+											div(class="blogs-text")
+												div(class="blogs-text-title") Что случилось с набережной в Дадунхае? 
+												div(class="blogs-description") Не спрятаться, не скрыться...
+
+					div(class="blogs-show-all show-all")
 						a(href="#") все блоги
 
 			include ../blocks/comments
