--- a/src/css/css3.css
+++ b/src/css/css3.css
@@ -3,7 +3,7 @@
 	 ========================================================================== */
 
 /* @import blocks */
-
+@import "blocks/content.css"; 
 @import "blocks/header.css"; 
 @import "blocks/footer.css"; 
 @import "blocks/previews.css";
