--- a/src/css/main.css
+++ b/src/css/main.css
@@ -31,7 +31,7 @@ input {outline:none;}
 main {min-height:100%;}
 .clear.clear-footer {height:100px;}
 .site-wrap {min-width:320px; margin:0px auto;}
-.container { position: relative; min-height: 100%;}
+
 
 
 /* Header */
@@ -40,8 +40,8 @@ header {background:#efefef; width:100%;}
 
 /* Footer */
 
-/*footer {position:absolute;left: 0;bottom: 0;width: 100%;height: 761px;}*/
-
+/*footer {position:absolute;left: 0;bottom: 0;width: 100%;height: 728px;}
+.container { position: relative; min-height: 100%;}*/
 
 
 /* ==========================================================================
