--- a/src/pug/layout/layout.pug
+++ b/src/pug/layout/layout.pug
@@ -31,7 +31,7 @@ html(class='no-js' lang='ru')
 		title 
 			block title
 	body
-
-		include ../blocks/header
-		block content
-		include ../blocks/footer
+		div(class="container")
+			include ../blocks/header
+			block content
+			include ../blocks/footer
